# toypc

./: .gitignore  Cargo.toml  Makefile  README.md  assembly.html  emulator.css  emulator.html  main.js  webapp.wasm  worker.js
book/: Cargo.toml  Makefile  appendix.tex  frontmatter.tex  toypc.bib  toypc.tex
book/cover/: back.tex  front.tex
book/part1/: chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  conclusion.tex  introduction.tex  part1.tex
book/part2/: chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  conclusion.tex  introduction.tex  part2.tex
book/part3/: chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  chapter8.tex  conclusion.tex  introduction.tex  part3.tex
book/part4/: chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  chapter8.tex  conclusion.tex  introduction.tex
book/preamble/: floats.tex  hyperlinks.tex  paragraph.tex  preprocessor.tex  titles.tex  verbatim.tex
book/preprocessor/: Cargo.toml
book/preprocessor/src/: main.rs
book/src/: context.rs  cv2tikz.py  keyboard.rs  main.rs  svg2tikz.py  util.rs
book/src/arm/: assembler.rs  instruction.rs  mod.rs  types.rs
book/src/atmel/: mod.rs  registers.rs
book/src/part1/: mod.rs
book/src/part2/: mod.rs
book/src/part3/: mod.rs
book/src/part4/: mod.rs
book/src/raio/: registers.rs
book/src/t8/: assembler.rs  emulator.rs  mod.rs
book/src/toy/: mod.rs  transpiler1.rs  transpiler2.rs  transpiler3.rs  transpiler4.rs  util.rs  (+1 more)
(+153 files in other folders)
