[package]
name = "book"
version = "1.0.0"
authors = ["Eric Bruneton"]
license = "GPL-3.0-only.txt"
edition = "2021"

[dependencies]
emulator = { path = "../emulator" }
scripts = { path = "../scripts" }
postcard = { version = "1.0", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
